--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,36 @@
 theme: jekyll-theme-minimal
+# Site settings
+name: Francis
+email: xkf1273@gmail.com
+author: Francis
+resume_site: https://francisxkf.github.io/blog
+github: https://github.com/francisXKF/
+baseurl: "/blog"
+description: Actually, less is more!
+
+#permalink: /:categories/:year/:month/:day/:title/
+permalink: /:year/:month/:day/:title/
+paginate: 10
+
+exclude: ['README.md', 'Gemfile.lock', 'Gemfile', 'Rakefile']
+
+github_username: francisXKF
+highlighter: Pygments
+
+# Build settings
+#markdown: kramdown
+
+#baidu_analysis: 94be4b0f9fc5d94cc0d0415ea6761ae9
+
+# FB:
+#   comments :
+#     provider : duoshuo
+#     duoshuo:
+#         short_name : luoyan35714
+#     disqus :
+#         short_name : freudkang
+    # facebook :
+    #   appid : 123
+    #   num_posts: 5
+    #   width: 580
+    #   colorscheme: light
