--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,8 @@ theme: jekyll-theme-minimal
 name: Francis
 email: xkf1273@gmail.com
 author: Francis
-resume_site: https://francisxkf.github.io/blog
+resume_site: https://francisxkf.github.io
 github: https://github.com/francisXKF/
-baseurl: "/blog"
 description: Actually, less is more!
 
 #permalink: /:categories/:year/:month/:day/:title/
